<resources>
    <string name="app_name">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="weather">WEATHER</string>
    <string name="welcome">WELCOME</string>
    <string name="cricketer">CRICKETER</string>
    <string name="greetings">Hii Welcome, %1$s</string>
    <string name="dynamic">HetrogenousLayouts</string>
    <string name="special">special</string>
    <string name="tab_view">TABS</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="next_page">Next Page</string>
    <string name="textarea">texthint</string>
    <string name="hints">enter your hint</string>
    <string name="submit">submit</string>
    <string name="handled_text">Handled Text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_favourite_player">Enter your Favourite player</string>
    <string name="go">GO</string>
</resources>